2008-06-01  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.xcodeproj/project.pbxproj: add new tclOO files; add debug
	* macosx/README:			targets with gcov; update to
						Xcode 3.1.

2008-05-27  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/ttk/ttkTheme.c: [ttk::style theme use] without
	* doc/ttk_style.n: an argument now returns the current theme

2008-05-23  Joe English  <jenglish@users.sourceforge.net>

	* doc/ttk_treeview.n, generic/ttk/ttkTreeview.c,
	generic/ttk/ttkTagSet.c, generic/ttk/ttkLayout.c,
	generic/ttk/ttkTheme.c, generic/ttk/ttkTheme.h,
	generic/ttk/ttkThemeInt.h, generic/ttk/ttkWidget.h:
	
	Added [$tv identify region], [$tv identify element],
	and [$tv identify item] subcommands.  Simplified
	bindings.  Added [$tv tag has] subcommand.  Tag-related
	display improvements; setting a tag -background or -foreground
	no longer overrides selection feedback.


	* library/ttk/altTheme.tcl, library/ttk/aquaTheme.tcl,
	library/ttk/clamTheme.tcl, library/ttk/classicTheme.tcl,
	library/ttk/defaults.tcl, library/ttk/treeview.tcl,
	library/ttk/winTheme.tcl, library/ttk/xpTheme.tcl:

	Don't need separate 'Item', 'Cell', and 'Row' style
	settings anymore, only the base "Treeview" style is used.


2008-05-23  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkLabel.c: Avoid passing width or height <= 0 to 
	Tk_RedrawImage, as this leads to a panic on Windows [Bug 1967576]

2008-05-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/xpTheme.tcl: Add correct border to combobox on Vista

2008-05-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: We should use the thread allocator for threaded
	* win/rules.vc:    builds. Added 'tclalloc' option to disable.

2008-05-14  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkPanedWindow.c (PanedWindowProxyCommand)
	(DisplayPanedWindow): Ensure that a zero width never gets fed to the
	underlying window system. [Bug 1639824]
